fix bugs in ExceptionInfoHandler